--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <!-- Here is a style rule, using Cascading Style Sheets (CSS)-->
         <style>
             body{
-                background-color: grey;
+                background-color: rgb(143, 236, 196);
             }
 
         </style>
